# vehikl

./: brew.sh  uv.md
.config/: .tmux.conf  config.fish
.config/fish/: config.fish  fish_variables
.config/nvim/: init.lua  lazy-lock.json
.config/nvim/lua/config/: options.lua
.config/nvim/lua/plugins/: v2.lua
configs/: config.fish
configs/nvim/lua/config/: keymaps.lua
configs/nvim/lua/plugins/: example.lua  test.lua
tyby-industries/: docker-install.sh
tyby-industries/dev/: .env  chat.py  duckduckgo.py  pyproject.toml
tyby-industries/dev/responses/: gpt-5-mini.md  gpt-5-nano.md  grok-code-fast-1.md  qwen3-coder-plus-c99.md  qwen3-coder-plus.md
tyby-industries/responses/origin/: gemini-2.5-flash.md  gpt-5-nano.md  gpt-5-v2.md  gpt-5.md  grok-code-fast-1.md  groq.md  llama-4-maverick:free.md  qwen3-coder-plus.md  r2.md  response.md
tyby-industries/scripts/: extract-env.py  llm.py
