[project]
name = "tyby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ddgs>=9.6.0",
  "duckduckgo-search>=8.1.1",
  "langchain>=0.3.27",
  "langchain-anthropic>=0.3.20",
  "langchain-community>=0.3.29",
  "langchain-deepseek>=0.1.4",
  "langchain-google-genai>=2.1.12",
  "langchain-groq>=0.3.8",
  "langchain-openai>=0.3.33",
  "python-dotenv>=1.1.1",
]
